jvmFlagAccess.cpp: clang 9.0.0 format specifier error

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • b18

      Reported by Matthias Baesken

      After JDK-8081833

      ./src/hotspot/share/runtime/flags/jvmFlagAccess.cpp:250:82: error: format specifies type 'unsigned long' but the argument has type 'unsigned long long' [-Werror,-Wformat]

          st->print("[ " SIZE_FORMAT_W(-25) " ... " SIZE_FORMAT_W(25) " ]", size_t(0), SIZE_MAX);
      /usr/include/stdint.h:153:20: note: expanded from macro 'SIZE_MAX'
      #define SIZE_MAX UINT64_MAX
      /usr/include/stdint.h:87:27: note: expanded from macro 'UINT64_MAX'
      #define UINT64_MAX 18446744073709551615ULL

      ======
      checking for clang... /usr/bin/clang
      checking resolved symbolic links for CC... no symlink
      configure: Using clang C compiler version 9.0.0 [Apple LLVM version 9.0.0 (clang-900.0.39.2) Target: x86_64-apple-darwin16.7.0 Thread model: posix InstalledDir: /Library/Developer/CommandLineTools/usr/bin]
      checking whether the C compiler works... yes
      checking for clang++... /usr/bin/clang++
      checking resolved symbolic links for CXX... no symlink
      configure: Using clang C++ compiler version 9.0.0 [Apple LLVM version 9.0.0 (clang-900.0.39.2) Target: x86_64-apple-darwin16.7.0 Thread model: posix InstalledDir: /Library/Developer/CommandLineTools/usr/bin]

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: