8253548: jvmFlagAccess.cpp: clang 9.0.0 format specifier error